--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp-autoprefixer": "^3.1.1",
     "gulp-connect": "^5.0.0",
     "gulp-livereload": "^3.8.1",
+    "gulp-image-optimization": "^0.1.3",
     "gulp-minify-css": "^1.2.4",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2"
